--- a/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Relational.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Relational.csproj
@@ -9,7 +9,15 @@
     <RootNamespace>IFramework.MessageStores.Relational</RootNamespace>
     <Description>Supports netcore standard2.0</Description>
     <PackageReleaseNotes></PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\netstandard2.0\IFramework.MessageStores.Sqlserver.xml</DocumentationFile>
