--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -71,50 +71,64 @@
     },
     "WriteTo": [
       {
-        "Name": "Logger",
+        "Name": "Async",
         "Args": {
-          "configureLogger": {
-            "Filter": [
-              {
-                "Name": "ByIncludingOnly",
-                "Args": {
-                  "expression": "@Level = 'Information'"
+          "configure": [
+            {
+              "Name": "Logger",
+              "Args": {
+                "configureLogger": {
+                  "Filter": [
+                    {
+                      "Name": "ByIncludingOnly",
+                      "Args": {
+                        "expression": "@Level = 'Information' or @Level = 'Debug'"
+                      }
+                    }
+                  ],
+                  "WriteTo": [
+                    {
+                      "Name": "File",
+                      "Args": {
+                        "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {SourceContext} [{Level:w3}] {Message} Scope: {Properties:j}{NewLine}{Exception}{NewLine}",
+                        "path": "log/sample_debug_.txt",
+                        "rollingInterval": "Day"
+                      }
+                    }
+                  ]
                 }
               }
-            ],
-            "WriteTo": [
-              {
-                "Name": "File",
-                "Args": {
-                  "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {SourceContext} [{Level}] {Message} {Scope} {NewLine} {Exception}{NewLine}",
-                  "path": "log/sample_debug_.txt",
-                  "rollingInterval": "Day"
-                }
-              }
-            ]
-          }
+            }
+          ]
         }
       },
       {
-        "Name": "File",
+        "Name": "Async",
         "Args": {
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {SourceContext} [{Level}] {Message} {Scope} {NewLine}{Exception}{NewLine}",
-          "path": "log/sample_error_.txt",
-          "rollingInterval": "Day",
-          "restrictedToMinimumLevel": "Warning"
-        }
+          "configure": [
+            {
+              "Name": "File",
+              "Args": {
+                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {SourceContext} [{Level:w3}] {Message} Scope: {Properties:j}{NewLine}{Exception}{NewLine}",
+                "path": "log/sample_error_.txt",
+                "rollingInterval": "Day",
+                "restrictedToMinimumLevel": "Warning"
+              }
+            }
+          ]
+        } 
       }
       //{
-      //  "Name": "MSSqlServer",
-      //  "Args": {
-      //    "connectionString": "Server=(localdb)\\projects;Database=Ids.Application;Trusted_Connection=True;MultipleActiveResultSets=true",
-      //    "tableName": "Log",
-      //    "columnOptionsSection": {
-      //      "addStandardColumns": [ "LogEvent" ],
-      //      "removeStandardColumns": [ "Properties" ]
-      //    }
-      //  }
-      //}
+        //  "Name": "MSSqlServer",
+        //  "Args": {
+        //    "connectionString": "Server=(localdb)\\projects;Database=Ids.Application;Trusted_Connection=True;MultipleActiveResultSets=true",
+        //    "tableName": "Log",
+        //    "columnOptionsSection": {
+        //      "addStandardColumns": [ "LogEvent" ],
+        //      "removeStandardColumns": [ "Properties" ]
+        //    }
+        //  }
+        //}
     ]
   }
 }
