--- a/Src/iFramework.Plugins/IFramework.EntityFrameworkCore/IFramework.EntityFrameworkCore.csproj
+++ b/Src/iFramework.Plugins/IFramework.EntityFrameworkCore/IFramework.EntityFrameworkCore.csproj
@@ -10,6 +10,7 @@
     <PackageReleaseNotes>1. Add IRepository.AddAsync method
 2. Support ConcurrentProcess for unique constrain validation.</PackageReleaseNotes>
     <Description>Supports netcore standard2.0</Description>
+    <Version>5.0.0-preview002</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -25,7 +26,7 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.0-preview.7.20365.15" />
   </ItemGroup>
 
   <ItemGroup>
