--- a/Src/iFramework.Plugins/IFramework.MessageStores.Abstracts/IFramework.MessageStores.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores.Abstracts/IFramework.MessageStores.Abstracts.csproj
@@ -4,11 +4,12 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Authors>Ivan</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>5.0.0-preview002</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-preview.7.20365.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.0-preview.7.20365.15" />
   </ItemGroup>
 
   <ItemGroup>
