--- a/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Relational.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Relational.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>IFramework.MessageStores.Relational</RootNamespace>
     <Description>Supports netcore standard2.0</Description>
     <PackageReleaseNotes></PackageReleaseNotes>
+    <Version>5.0.0-preview002</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -23,7 +24,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.0-preview.7.20365.15" />
   </ItemGroup>
 
   <ItemGroup>
