--- a/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Relational.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Relational.csproj
@@ -24,7 +24,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.0-preview.7.20365.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.0-rc.1.20451.13" />
   </ItemGroup>
 
   <ItemGroup>
