--- a/Src/IFramework.Test/log4net.config
+++ b/Src/IFramework.Test/log4net.config
@@ -59,6 +59,7 @@
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
     <!--取消这里注释记录所有debug log-->
+    <appender-ref ref="debugRollingFile"/>
     <appender-ref ref="errorRollingFile"/>
   </root>
   <!--取消注释下面节, 指定name 的 debug log, 注意name是在logger.create时用的是className还是namespace.className 
@@ -70,8 +71,8 @@
   <logger name="IFramework.Test">
     <appender-ref ref="debugRollingFile"/>
   </logger>
-  <!--<logger name="Microsoft.EntityFrameworkCore.Database.Command">
+  <logger name="Microsoft.EntityFrameworkCore.Database.Command">
     <level value="INFO"/>
     <appender-ref ref="debugAsyncAppender"/>
-  </logger>-->
+  </logger>
 </log4net>
