--- a/Src/iFramework.Plugins/IFramework.Infrastructure.EventSourcing/IFramework.Infrastructure.EventSourcing.csproj
+++ b/Src/iFramework.Plugins/IFramework.Infrastructure.EventSourcing/IFramework.Infrastructure.EventSourcing.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Version>5.0.0-preview002</Version>
   </PropertyGroup>
 
   <ItemGroup>
