--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -5,7 +5,7 @@
     "SampleModelContext.MongoDb": "mongodb://10.100.7.46:9007/SampleModelContext?maxPoolSize=2000&connectTimeoutMS=60000&serverSelectionTimeout=60000&socketTimeout=60000"
   },
   "KafkaClientOptions": {
-    "BrokerList": "10.100.7.46:9092"
+    "BrokerList": "localhost:9092"
   },
   "PathBase": "/core",
   "App": "CommandServiceCore",
