--- a/Src/iFramework.Plugins/IFramework.MessageQueueCore.ConfluentKafka/IFramework.MessageQueue.ConfluentKafka.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueueCore.ConfluentKafka/IFramework.MessageQueue.ConfluentKafka.csproj
@@ -11,14 +11,10 @@
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>      	
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>7.1</LangVersion>
-  </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn>1701;1702;1591</NoWarn>
-    <DocumentationFile>bin\Release\netstandard2.0\IFramework.MessageQueue.ConfluentKafka.xml</DocumentationFile>
-    <LangVersion>7.2</LangVersion>
+    <DocumentationFile>IFramework.MessageQueue.ConfluentKafka.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
